fix overflow

--- a/source/less/blocks/catalog-mob.less
+++ b/source/less/blocks/catalog-mob.less
@@ -5,6 +5,8 @@
   transition: transform 0.3s;
 
   .catalog__categories {
+    overflow: hidden;
+
     &>.catalog__category {
       &>.catalog__item {
         border-bottom: 1px solid #dadada;
